# xebble

./: .clang-format  .clang-tidy  .clangd  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  TODO.md  c64.pcf  vcpkg.json
cmake/: xebbleConfig.cmake.in
docs/plans/: 2026-03-05-ecs-design.md  2026-03-05-ecs-implementation.md  2026-03-05-enhanced-example-design.md  2026-03-05-enhanced-example-implementation.md  2026-03-05-xebble-design.md  2026-03-05-xebble-implementation.md  2026-03-06-builtin-rendering-design.md  2026-03-06-builtin-rendering-implementation.md  2026-03-06-ui-system-design.md  2026-03-06-ui-system-implementation.md
examples/: CMakeLists.txt
examples/basic_tilemap/: dungeon.hpp  font_gen.hpp  main.cpp  tiles.hpp
examples/basic_tilemap/assets/: .gitignore  TILESET-LICENSE.txt  manifest.toml
examples/ex01_hello_world/: main.cpp
examples/ex02_tilemap/: main.cpp
examples/ex03_sprites/: main.cpp
examples/ex04_input/: main.cpp
examples/ex05_ui/: main.cpp
examples/ex06_ecs/: main.cpp
examples/ex07_scene/: main.cpp
examples/ex08_grid_fov_path/: main.cpp
examples/ex09_procgen/: main.cpp
examples/ex10_rng/: main.cpp
examples/ex11_turn/: main.cpp
examples/ex12_msglog/: main.cpp
examples/ex13_serial/: main.cpp
examples/ex14_fonts/: main.cpp
examples/ex15_atlas_debug/: main.cpp
examples/ex16_graphics_settings/: main.cpp
examples/ex17_audio/: main.cpp
examples/shared/: pixel_atlas.hpp
include/xebble/: asset_manager.hpp  audio.hpp  builtin_systems.hpp  components.hpp  config.hpp  debug.hpp  ecs.hpp  embedded_font.hpp  embedded_fonts.hpp  event.hpp  font.hpp  fov.hpp  game.hpp  grid.hpp  input_map.hpp  log.hpp  msglog.hpp  pathfinding.hpp  procgen.hpp  renderer.hpp  rng.hpp  scene.hpp  serial.hpp  sprite.hpp  spritesheet.hpp  system.hpp  texture.hpp  tilemap.hpp  turn.hpp  types.hpp  ui.hpp  window.hpp  world.hpp  xebble.hpp
scripts/: gen_embedded_fonts.py
shaders/: CMakeLists.txt  blit.frag  blit.vert  sprite.frag  sprite.vert
src/: CMakeLists.txt  asset_manager.cpp  audio.cpp  audio_sid.hpp  audio_xmp.hpp  bdf_parser.hpp  builtin_systems.cpp  config.cpp  debug.cpp  embedded_berkelium64.cpp  embedded_font.cpp  embedded_fonts_helpers.cpp  embedded_petme64.cpp  embedded_petme642y.cpp  font.cpp  fov.cpp  game.cpp  grid.cpp  input_map.cpp  log.cpp  pathfinding.cpp  pcf_parser.hpp  placeholder.cpp  renderer.cpp  rng.cpp  sprite.cpp  spritesheet.cpp  stb_impl.cpp  texture.cpp  tilemap.cpp  ui.cpp  utf8.hpp  window.cpp  window_linux.cpp  window_macos.cpp  window_windows.cpp  world.cpp
src/sidplay/: CMakeLists.txt  config.h  config.h.in
src/sidplay/builders/residfp-builder/residfp/: siddefs-fp.h
src/sidplay/sidplayfp/: sidversion.h
src/vulkan/: buffer.cpp  buffer.hpp  command.cpp  command.hpp  context.cpp  context.hpp  descriptor.cpp  descriptor.hpp  pipeline.cpp  pipeline.hpp  swapchain.cpp  swapchain.hpp  vma_impl.cpp
tests/: CMakeLists.txt  test_asset_manager.cpp  test_config.cpp  test_ecs.cpp  test_embedded_font.cpp  test_event.cpp  test_font.cpp  test_fov.cpp  test_grid.cpp  test_input_map.cpp  test_msglog.cpp  test_pathfinding.cpp  test_procgen.cpp  test_rng.cpp  test_scene.cpp  test_serial.cpp  test_spritesheet.cpp  test_tilemap.cpp  test_turn.cpp  test_types.cpp  test_ui.cpp
